--- a/Projeto-Front-end/package.json
+++ b/Projeto-Front-end/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "json-server": "^0.17.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
@@ -32,5 +33,13 @@
     "postcss": "^8.5.3",
     "sass": "^1.88.0",
     "vite": "^6.3.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "directories": {
+    "doc": "doc"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
